--- a/html5/baby.html
+++ b/html5/baby.html
@@ -14,7 +14,7 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <section>
 <p>20XX-XX-XX 실습 내용</p>
 <ol type ="1">
-<li><a href="https://hyuntaej.github.io/html5/baby.html" target="조현태">1-3 baby.html</a></li>
+<li><a href="https://hyuntaej.github.io/html5/baby.html" target="조현태">1-3 html5/baby.html</a></li>
 <li><a href="https://xxxxxxxxxxx.github.io/def.html" target="_blank">7-2 def.html</a></li>
 </ol>
 </section>
