--- a/1/korea.html
+++ b/1/korea.html
@@ -4,8 +4,11 @@
 <meta charest="utf-8"/>
 <style>
   body.user_class_1 {font-style:italic;}
-  p#user_id_1 { color:red; }
-  p#user_id_2 { color:green; }
+  p#user_id_1 { color:black; }
+  p#user_id_2 { color:black; }
+  p#user_id_3 { color:black; }
+  p#user_id_4 { color:black; }
+  p#user_id_5 { color:green; }
 </style>
 <title>타이틀 표제</title>
 </head>
