--- a/1/body.html
+++ b/1/body.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- bodyBasic.html -->
+<!doctype html>  <!-- bodyBasic.html -->
 <html lang="ko">
   <head>
     <meta charest="utf-8"/>
@@ -12,6 +12,6 @@
   </head>
     <body onload="eventonload()">
       <p>클릭</p>
-      <p id="id_1">메시지표시</P>
+      <p id="id_1">메시지표시</p>
     </body>
 </html>
