--- a/1/basicHeading.html
+++ b/1/basicHeading.html
@@ -1,8 +1,8 @@
-<!doctype html> <!-- basicHeading Html -->
+<!doctype html> <!-- basicHeading.html -->
 <html>
 <head>
 <meta charest="utf-8"/>
-  <meta name="viewprt"content="width=devicewidth, initial-scale=1"/>
+  <meta name="viewport"content="width=device-width, initial-scale=1"/>
   <title>문서 타이틀 표제</title>
   </head>
   <body>
