--- a/1/subjectTable1.html
+++ b/1/subjectTable1.html
@@ -19,7 +19,7 @@
 			<tr><td>12</td></tr>
 			<tr><td>1</td><td rowspan="4">C++프로<br>그래밍<br>이새봄<br>24414</td><td>디지털논리<br>회로<br>김용수<br>24401</td><td rowspan="5"> </td><td rowspan="2">인터넷 응용<br>우훈식<br>24404</td></tr>
 			<tr><td>2</td><td rowspan="3"> </td><td rowspan="4"> </td></tr>
-			<tr><td>3</td><td rowspan="3"> </td><td rowspan="3"> </td></tr>
+			<tr><td>3</td><td rowspan="3"> </td></tr>
 			<tr><td>4</td></tr>
 			<tr><td>5</td><td> </td><td>인터넷 응용<br>우훈식<br>24404</td></tr>
 		</tbody>
