--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <section>
 <p>20XX-XX-XX 실습 내용</p>
 <ol type ="1">
-<li><a href="https://hyuntaej.github.io/html5/homework1-3.html" target="_blank">조현태 1-3 </a></li>
-<li><a href="https://xxxxxxxxxxx.github.io/def.html" target="_blank">7-2 def.html</a></li>
+<li><a href="hyuntaej.github.io/html5/homework1-3.html" target="_blank">조현태 1-3 </a></li>
+<li><a href="hyuntaej.github.io/1/def.html" target="_blank">def.html</a></li>
+  <li><a href="hyuntaej.github.io/1/lovekorea.html" target="_blank">lovekorea.html </a></li>
+  <li><a href="hyuntaej.github.io/1/globalAttribute.html" target="_blank">globalAttribute.html </a></li>
+  <li><a href="hyuntaej.github.io/1/globalEvent.html" target="_blank">globalEvent.html </a></li>
+  <li><a href="hyuntaej.github.io/1/koreaAnthem.html" target="_blank">koreaAnthem.html </a></li>
+  <li><a href="hyuntaej.github.io/1/body.html" target="_blank">body.html </a></li>
+  <li><a href="hyuntaej.github.io/1/headBasic.html" target="_blank">headBasic.html </a></li>
+  <li><a href="hyuntaej.github.io/1/koreaAnthem3.html" target="_blank">koreaAnthem3.html </a></li>
+  <li><a href="hyuntaej.github.io/1/basicHeading.html" target="_blank">basicHeading.html </a></li>
+  <li><a href="hyuntaej.github.io/1/basicPBrHr.html" target="_blank">basicPBrHr.html </a></li>
+  <li><a href="hyuntaej.github.io/1/basicChar.html" target="_blank">basicChar.html </a></li>
+  <li><a href="hyuntaej.github.io/1/basicList.html" target="_blank">basicList.html </a></li>
+  <li><a href="hyuntaej.github.io/1/basicDList.html" target="_blank">basicDList.html </a></li>
+    <li><a href="hyuntaej.github.io/1/basicTable.html" target="_blank">basicTable.html </a></li>
+    <li><a href="hyuntaej.github.io/1/tableSpan.html" target="_blank">tableSpan.html </a></li>
+    <li><a href="hyuntaej.github.io/1/advTable.html" target="_blank">advTable.html </a></li>
 </ol>
 </section>
 </body>
