--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ a:link {color:blue; text-decoration:none;} a:visited { color:purple; text-decora
 a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<title>20XX년도 인터넷 수강</title>
+<title>2021년도 인터넷 수강</title>
 </head>
 <body>
 <header></header>
 <section>
-<p>20XX-XX-XX 실습 내용</p>
+<p>2021-XX-XX 실습 내용</p>
 <ol type ="1">
 <li><a href="hyuntaej.github.io/html5/homework1-3.html" target="_blank">조현태 1-3 </a></li>
 <li><a href="hyuntaej.github.io/1/def.html" target="_blank">def.html</a></li>
