--- a/1/divspan.html
+++ b/1/divspan.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html> <!-- divSpan.html -->
 <html lang="ko">
-  <head><meta charest="utf-8"/><meta name="biewport" content="width=device-width, initial-scale=1"/>
-    <title>HTMl5DIV SPAN실습</title>
+  <head><meta charest="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>HTMl5 DIV SPAN실습</title>
   </head>
   <body>
     <div>
-      HTML은 문서구조요소인 블록요소와 텍스트 요소인 인라인 요소가 있다. 홈페이지 공간을 분할할 떄, 블록 요소는 
-      줄바꿈 태그없이 스스로 줄바꿈을 실행하는 블록 형식의 요소이고, 인라인 요소는 줄바꿈 요소가 없는 
+      HTML은 문서구조요소인 블록요소와 텍스트 요소인 인라인 요소가 있다. 홈페이지 공간을 분할할 때, 블록 요소는 
+      줄바꿈 태그없이 스스로 줄바꿈을 실행하는 블록 형식의 문서구조 요소이고, 인라인 요소는 줄바꿈 요소가 없는 
       경우 가로로 계속하여 진행하는 것으로 텍스트 요소라 할 수 있다. </div>
     <div>
       div와span요소는 각각 대표적인 블록요소와 인라인 요소이며, 홈 페이지의 공간을 일정부분 분할하여 공간을
