--- a/1/advDiv.html
+++ b/1/advDiv.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- basicDiv.html -->
+<!doctype html> <!-- advDiv.html -->
 <html>
   <head><meta charest="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
