--- a/1/basicSemantic.html
+++ b/1/basicSemantic.html
@@ -15,4 +15,23 @@
     </style>
     <title>시멘틱 학습</title>
   </head>
-      
+      <body>
+        <header>
+          <h2>실습을 환영합니다</h2> </header>
+        <nav>
+          <ul>
+            <li id="home">홈</li>
+            <li id="intro">소개</li>
+            <li id="server">서버</li>
+          </ul></nav>
+        <section id="displayArea">
+        </section>
+        <aside>
+          <ul>
+            <li>googlePlus</li>
+            <li>Facebook</li>
+            <li>Twitter</li>
+            </aside>
+          <footer>
+            <p>&copy;20XX Made by Korea. All rights reserved.</p> </footer>
+          </body></html>
