--- a/1/basicImage.html
+++ b/1/basicImage.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<-- basicImage.html -->
+<!DOCTYPE html> <-- basicImage.html -->
 <html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>HTML5 이미지 실습</title>
@@ -8,17 +7,17 @@
 <figure>
  <h3>SNS 사이트</h3>
  <a href="https://www.google.com">
-  <img src="https://user-images.githubusercontent.com/79959945/113473032-f110fd00-94a1-11eb-916e-a8edf4453e4d.png" alt="구글"><br>
+  <img src="../images/googlePlus.png" alt="구글"/><br>
   <figcaption>(그림)구글 링크</figcaption>
   </a>
    <a href="https://www.facebook.com">
-        <img src="https://user-images.githubusercontent.com/79959945/113473046-130a7f80-94a2-11eb-95bd-b480622c0418.png" alt="페이스북"><br>
+        <img src="../images/facebookOne.png" alt="페이스북"><br>
         <figcatpion>(그림)페이스북 링크</figcatpion>
   </a>
   <a href="https://www.twitter.com">
-   <img src="https://user-images.githubusercontent.com/79959945/113473048-14d44300-94a2-11eb-8c86-559c0168ccc8.png" alt="트위터"><br>
+   <img src="../images.twitterYou.png" alt="트위터"><br>
     <figcaption>(그림)트위터 링크</figcaption>
    </a>
-    </figure>
+  </figure>
   </body>
   </html>
