--- a/1/basicImage.html
+++ b/1/basicImage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <-- basicImage.html -->
 <html><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>HTML5 이미지 실습</title>
 </head>
 <body>
