--- a/1/basicImage.html
+++ b/1/basicImage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> <-- basicImage.html -->
-<html><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HTML5 이미지 실습</title>
+<html><head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>HTML5 이미지 실습</title>
 </head>
 <body>
 <figure>
@@ -20,4 +21,4 @@
  </a>
 </figure>
 </body>
-</html>
+ </html>
