--- a/1/anchor1.html
+++ b/1/anchor1.html
@@ -1,12 +1,12 @@
 <!Doctype html> <!-- anchor1.html -->
-<html><head><meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html><head><meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>HTML5 앵커 실습</title></head>
   <body>
     <h3 id="chapter1">제 1장</h3>
     <p>제 1장 입니다. 제 1장은 다음을 정의합니다.</p>
     <p>다음</p>
-    <a href="http://www.google.com" target="_blank">구글이동(새윈도우)</a><br>
+    <a href="http://www.google.com" target="_blank">구글이동(새윈도우)</a><br/>
     <a href="anchor2.html">사이트내문서이동</a><br>
     <a href="#chapter3">제3장문서내이동(북마크이동)</a><br>
   <h3 id="chapter2">제 2장</h3>
