Update and rename formDate1.html to formDateTime1.html

--- a/1/formDateTime1.html
+++ b/1/formDateTime1.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- formDate1.html -->
+<!doctype html> <!-- formDateTime1.html -->
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>폼 학습</title></head>
 <body>
@@ -12,7 +12,7 @@
  <input type="time" id="times" name="timex"/>
  <button type="submit">입력</button>
  <input type="reset" name="reset1" value="취소"/>
- </fieldset><
+ </fieldset>
 </form>
 </section>
 </body></html>
