--- a/1/formEmailAuto.html
+++ b/1/formEmailAuto.html
@@ -12,7 +12,7 @@
   <input type="email" id="emailx" name="emailx" autocomplete="off"/>
   <button type="submit">조회</button>
   <input type="reset" name="reset1" value="취소"/>
- </fieldset><
+ </fieldset>
 </form>
 </section>
 </body></html>
