--- a/1/formFormaction1.html
+++ b/1/formFormaction1.html
@@ -1,10 +1,10 @@
 <!doctype html> <!-- formFormaction1.html -->
-<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="http://jsptogo.herokuapp.com/jspsrc/formFormaction1.jsp" method="POST" autocomplete="on">
-  <fieldset>
+<form action="http://jsptogo.herokuapp.com/jspsrc/formFormaction1.jsp" method="post" autocomplete="on">
+ <fieldset>
   <legend>최단 시간 찾기</legend>
   <label for="fromx">출발: </label>
   <input type="text" id="fromx" name="fromx" placeholder="출발"/>
