--- a/1/formMselect1.html
+++ b/1/formMselect1.html
@@ -3,7 +3,7 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="https://hyuntaej.github.io/jspsrc/formMselect1.jsp" method="post">
+<form action="https://jsptogo.herokuapp.github.io/jspsrc/formMselect1.jsp" method="post">
  <fieldset>
     <legend>식사 선택</legend>
     <label for="timex">시간</label>
