--- a/1/formMselect1.html
+++ b/1/formMselect1.html
@@ -8,9 +8,10 @@
     <legend>식사 선택</legend>
     <label for="timex">시간</label>
     <select id="timex" name="mealtime">
-    <option value="아침">아침</option><option value="점심">점심</option><option value="저녁">저녁</option></select>
+    <option value="아침">아침</option><option value="점심">점심</option>
+    <option value="저녁">저녁</option></select>
     <label for="mealx">식사</label>
-    <select id="mealx" name="meal" multiple="">
+    <select id="mealx" name="meal" multiple>
     <option value="백미">백미</option><option value="라면">라면</option>
     <option value="김치">김치</option></select>
     <button type="submit">등록</button></fieldset></form>
