--- a/1/basicCssIntro1.html
+++ b/1/basicCssIntro1.html
@@ -1,6 +1,5 @@
 <!Doctype html> <!-- basicCssIntro1.html -->
 <html><head>
-  <html><head>
  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
  <style>
  div#div1 {                border:1px solid red; }   /" div는 display:block; 를 기본값 보유   */
@@ -9,7 +8,7 @@
  </style>
  <title>CSS 실습</title>
 </head>
-<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<body>
 <div id="div1">
 대부분의 HTML 엘리먼트는 고유의 스타일 프로퍼티(속성)을 보유하고 있다. 개발자는 style 엘리먼트를 이용하여
 엘리먼트의 스타일속성을 재정의할 수 있으며, 이때 사전에 정의된 고유의 HTML 스타일 속성이 변경되어
