--- a/1/inline1.html
+++ b/1/inline1.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- inline1.html -->
 <html>
 <head>
- <meta charset="utf-8">
+ <meta charset="utf-8"/>
  <title>인라인 스타일 실습</title>
 </head>
 <body>
