--- a/1/outstyle1.html
+++ b/1/outstyle1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
- <title>외부 스타일 실습</title>
+ <title>외부 스타일 시트 실습</title>
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
