--- a/1/cssStatic1.html
+++ b/1/cssStatic1.html
@@ -1,4 +1,4 @@
-<!doctype html> <-- cssStatic1.html -->
+<!doctype html> <!-- cssStatic1.html -->
 <html><head> <meta charset="utf-8">
  <title>position(배치) 실습</title><style>
  * {padding:0; margin:0;}
