--- a/1/memb3.html
+++ b/1/memb3.html
@@ -18,4 +18,5 @@ button { width:70px; height:25px;}
   <ul class="level_1">
   <li><button>회원가입</button></li>
   <li><button>취소</button></li></ul>
-</section></body></html>
+</section>
+</body></html>
