--- a/web/7week/1.html
+++ b/web/7week/1.html
@@ -9,6 +9,6 @@
   <img src="/web/7week/소스코드1.PNG" width=100% border=0 usemap="#area">
   <img src="/web/7week/소스코드2.PNG" width=100% border=0 usemap="#area">
   <br/> 결과코드 <br/>
-  <img src="/web/week_7/결과코드1.PNG" width=100% border=0 usemap="#area">
+  <img src="/web/7week/결과코드1.PNG" width=100% border=0 usemap="#area">
 
 </body></html>
