--- a/web/7week/1.html
+++ b/web/7week/1.html
@@ -1,10 +1,10 @@
 <!doctype html><!-- test.html -->
 <html><head><meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title> 임채혁 </title>
+<title> 조현태 </title>
 </head>
 <body>
-  <h2> 임채혁 </h2>
+  <h2> 조현태 </h2>
   <br/>소스코드<br/>
   <img src="/web/7week/소스코드1.PNG" width=100% border=0 usemap="#area">
   <img src="/web/7week/소스코드2.PNG" width=100% border=0 usemap="#area">
