--- a/johyuntae1912.html
+++ b/johyuntae1912.html
@@ -12,6 +12,9 @@
     <ul><hr/>
       <li> 7주 과제 </li>
       <ol>
-       
+       <li><a href=https://hyuntaej.github.io/web/7week/1.html>1</a></li>
+       <li><a href=https://hyuntaej.github.io/web/7week/2.html>2</a></li>
+       <li><a href=https://hyuntaej.github.io/web/7week/3.html>3</a></li>
+       <li><a href=https://hyuntaej.github.io/web/7week/4.html>4</a></li>
         </ul>
   </body></html>
