--- a/web/9week/1.html
+++ b/web/9week/1.html
@@ -1,1 +1,18 @@
+<!doctype html><!-- test.html -->
+<html><head><meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title> 조현태 </title>
+</head>
+<body>
+  <h2> 조현태 </h2>
+  <br/>소스코드<br/>
+  <img src="/web/9week/소스코드1.PNG" width=100% border=0 usemap="#area">
+  <img src="/web/9week/소스코드2.PNG" width=100% border=0 usemap="#area">
+   <img src="/web/9week/소스코드3.PNG" width=100% border=0 usemap="#area">
+   <img src="/web/9week/소스코드4.PNG" width=100% border=0 usemap="#area">
+  <br/> 결과코드 <br/>
+  <img src="/web/9week/결과코드1.PNG" width=100% border=0 usemap="#area">
+  <img src="/web/9week/결과코드2.PNG" width=100% border=0 usemap="#area">
+  <img src="/web/9week/결과코드3.PNG" width=100% border=0 usemap="#area">
 
+</body></html>
